--- a/src/App.css
+++ b/src/App.css
@@ -16,3 +16,9 @@ input {
 input::placeholder {
   font-family: CustomFont;
 }
+
+#imgcontainer {
+  -webkit-transition: all 0.7s ease-in-out;
+  -moz-transition: all 0.7s ease-in-out;
+  transition: all 0.7s ease-in-out;
+}
